@@ -147,6 +147,8 @@
 \newcommand{\email}[1]{\textsf{#1}}
 \newcommand{\tablecontinued}[1]{\textsf{#1}}
 \newcommand{\titlereference}[1]{\emph{#1}}
+\newcommand{\menuselection}[1]{\emph{#1}}
+\newcommand{\accelerator}[1]{\underline{#1}}
 
 % Redefine the Verbatim environment to allow border and background colors.
 % The original environment is still used for verbatims within tables.
